jni-macros/tests/ui/bind_java_type/fail/core_type_string_without_jni_core.rs
// Test that java.lang.String cannot be bound without __jni_core = true

jni_macros::bind_java_type! {
    rust_type = MyString,
    java_type = "java.lang.String",
}

fn main() {}
