jni-macros/tests/ui/bind_java_type/fail/core_type_string_without_jni_core.stderr
error: Cannot create binding for core Java type 'java.lang.String'. Core types (java.lang.Object, java.lang.Class, java.lang.Throwable, and java.lang.String) are already provided by the jni crate and cannot be re-bound.
 --> tests/ui/bind_java_type/fail/core_type_string_without_jni_core.rs:3:1
  |
3 | / jni_macros::bind_java_type! {
4 | |     rust_type = MyString,
5 | |     java_type = "java.lang.String",
6 | | }
  | |_^
  |
  = note: this error originates in the macro `jni_macros::bind_java_type` (in Nightly builds, run with -Z macro-backtrace for more info)
